unpackaged/main/default/objects/Claim_Carrier_Data__c/Claim_Carrier_Data__c.object-meta.xml
<CustomObject>
    <label>Claim Carrier Data</label>
    <nameField>
        <label>Claim Carrier Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Carrier Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>