unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Carrier_Current_Paid__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Current_Paid__c</fullName>
    <label>Carrier Current Paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>