unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Carrier_Flags__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Flags__c</fullName>
    <label>Carrier Flags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>