unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Carrier_Incurred_Indemnity__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Incurred_Indemnity__c</fullName>
    <label>Carrier Incurred Indemnity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>