unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Carrier_Last_Reserve_Change__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Last_Reserve_Change__c</fullName>
    <label>Carrier Last Reserve Change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>