unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Carrier_MMI_Date__c.field-meta.xml
<CustomField>
    <fullName>Carrier_MMI_Date__c</fullName>
    <label>Carrier MMI Date</label>
    <type>Date</type>
</CustomField>