unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Carrier_Most_Recent_Adjuster_Notes__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Most_Recent_Adjuster_Notes__c</fullName>
    <label>Carrier Most Recent Adjuster Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>