unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Carrier_Notes_Date__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Notes_Date__c</fullName>
    <label>Carrier Notes Date</label>
    <type>Date</type>
</CustomField>