unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Carrier_Outstanding_Total__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Outstanding_Total__c</fullName>
    <label>Carrier Outstanding Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>