unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Carrier_Policy_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Policy_Effective_Date__c</fullName>
    <label>Carrier Policy Effective Date</label>
    <type>Date</type>
</CustomField>