unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_All_Body_Part_data__c.field-meta.xml
<CustomField>
    <fullName>Claim_All_Body_Part_data__c</fullName>
    <label>Claim All Body Part data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>