unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Carrier_Claim_No__c.field-meta.xml
<CustomField>
    <fullName>Claim_Carrier_Claim_No__c</fullName>
    <label>Claim Carrier Claim No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>