unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Carrier_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Claim_Carrier_Date_of_Birth__c</fullName>
    <label>Claim Carrier Date of Birth</label>
    <type>Date</type>
</CustomField>