unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Carrier_Employer__c.field-meta.xml
<CustomField>
    <fullName>Claim_Carrier_Employer__c</fullName>
    <label>Claim Carrier Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>