unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Cause_of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Claim_Cause_of_Injury__c</fullName>
    <label>Claim Cause of Injury</label>
    <length>255</length>
    <type>Text</type>
</CustomField>