unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Closed_Date__c</fullName>
    <label>Claim Closed Date</label>
    <type>Date</type>
</CustomField>