unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Disposition_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Disposition_Date__c</fullName>
    <label>Claim Disposition Date</label>
    <type>Date</type>
</CustomField>