unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Gender__c.field-meta.xml
<CustomField>
    <fullName>Claim_Gender__c</fullName>
    <label>Claim Gender</label>
    <length>14</length>
    <type>Text</type>
</CustomField>