unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Litigated__c.field-meta.xml
<CustomField>
    <fullName>Claim_Litigated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Litigated</label>
    <type>Checkbox</type>
</CustomField>