unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Litigated_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Litigated_Date__c</fullName>
    <label>Claim Litigated Date</label>
    <type>Date</type>
</CustomField>