unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Nature_of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Claim_Nature_of_Injury__c</fullName>
    <label>Claim Nature of Injury</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>