unpackaged/main/default/objects/Claim_Carrier_Data__c/fields/Claim_Policy__c.field-meta.xml
<CustomField>
    <fullName>Claim_Policy__c</fullName>
    <label>Claim Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>