unpackaged/main/default/objects/Claim_Carrier_Data__c/recordTypes/Bodily_Injury.recordType-meta.xml
<RecordType>
    <fullName>Bodily_Injury</fullName>
    <active>true</active>
    <label>Bodily Injury</label>
</RecordType>